fix(component): Remove visibility: hidden style from hidden labels
affects: ak-tabs

Rely on the opacity: 0 style to hide the hidden label. This lets screenreaders see the hidden
labels.

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -39,7 +39,6 @@
   &.ak-tab-label-hidden {
     opacity: 0;
     position: absolute;
-    visibility: hidden;
   }
 
   &.ak-tab-label-single {
